js/js.translator/testData/incremental/invalidation/constValMoveBetweenModules/main/test.kt
import sample.answer

fun test(): Int = answer
